# firebase-functions-python

./: .gcloudignore  .git-blame-ignore-revs  .gitignore  .pylintrc  GEMINI.md  Makefile  README.md  async.md  cloudbuild.yaml  modernization.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: CONTRIBUTING.md
.github/scripts/: generate_changelog.sh  publish_preflight_check.sh
.github/workflows/: ci.yaml  release.yaml
docs/: generate.sh
docs/theme/devsite_sphinx_theme/: domainindex.html  layout.html  theme.conf
docs/theme/devsite_translator/: html.py
example/: firebase.json  index.html
example/functions/: main.py  requirements.txt
examples/: async_example.py
integration_test/: .env.example  .gitignore  README.md  checkout.sh  cloudbuild-v1.yaml  cloudbuild-v2.yaml  cloudbuild.yaml  package.json
integration_test/builders/python-node/: Dockerfile
integration_test/config/: suites.schema.json  suites.yaml
integration_test/config/v1/: suites.yaml
integration_test/config/v2/: suites.yaml
integration_test/functions/: .gitignore  main.py  region.py
integration_test/functions/v2/: database_tests.py  firestore_tests.py  https_tests.py  pubsub_tests.py  scheduler_tests.py  storage_tests.py  test_lab_tests.py
integration_test/scripts/: cleanup-auth-users.cjs  generate.js  run-tests.js
integration_test/templates/functions/: firebase.json.hbs  requirements.txt.hbs
integration_test/templates/functions/src/: main.py.hbs  utils.py.hbs
integration_test/templates/functions/src/v1/: database_tests.py.hbs  firestore_tests.py.hbs
integration_test/templates/functions/src/v2/: alerts_tests.py.hbs  database_tests.py.hbs  eventarc_tests.py.hbs  firestore_tests.py.hbs  identity_tests.py.hbs  pubsub_tests.py.hbs  remoteconfig_tests.py.hbs  scheduler_tests.py.hbs  storage_tests.py.hbs  tasks_tests.py.hbs  testlab_tests.py.hbs
integration_test/tests/: firebaseSetup.ts  utils.ts
integration_test/tests/v1/: auth.test.ts  firestore.test.ts  remoteconfig.test.ts  tasks.test.ts  testlab.test.ts
integration_test/tests/v2/: database.test.ts  eventarc.test.ts  firestore.test.ts  identity.test.ts  pubsub.test.ts  remoteConfig.test.ts  scheduler.test.ts  storage.test.ts  tasks.test.ts  testLab.test.ts
integration_tests/: .env.example  .firebaserc  .gitignore  firebase.json  package-lock.json  package.json  requirements.txt.template  run.ts  setup.ts
integration_tests/functions/: main.py  region.py
integration_tests/functions/v2/: eventarc_tests.py  firestore_tests.py  identity_tests.py  remote_config_tests.py  storage_tests.py  tasks_tests.py
integration_tests/tests/: utils.ts
integration_tests/tests/v1/: firestore.test.ts  remoteConfig.test.ts  storage.test.ts  testLab.test.ts
integration_tests/tests/v2/: database.test.ts  eventarc.test.ts  firestore.test.ts  identity.test.ts  pubsub.test.ts  remoteConfig.test.ts  scheduler.test.ts  storage.test.ts  tasks.test.ts  testLab.test.ts
samples/basic_alerts/functions/: main.py
samples/basic_db/functions/: main.py
samples/basic_eventarc/functions/: main.py
samples/basic_firestore/functions/: main.py
samples/basic_https/: firebase.json
samples/basic_https/functions/: main.py
samples/basic_params/functions/: main.py
samples/basic_pubsub/functions/: main.py  requirements.txt
samples/basic_rtdb/functions/: main.py  requirements.txt
samples/basic_scheduler/: __init__.py
samples/basic_scheduler/functions/: main.py
samples/basic_storage/: firebase.json
samples/basic_storage/functions/: main.py
samples/basic_tasks/: README.md  firebase.json
samples/basic_tasks/functions/: main.py  requirements.txt
samples/basic_test_lab/functions/: main.py
samples/https_flask/functions/: README.md  main.py  requirements.txt
samples/identity/: .firebaserc
samples/identity/client/: index.html
samples/identity/functions/: main.py  requirements.txt
scripts/: pack-for-integration-tests.sh
src/firebase_functions/: __init__.py  alerts_fn.py  core.py  dataconnect_fn.py  db.py  db_fn.py  eventarc_fn.py  firestore_fn.py  https.py  https_fn.py  identity_fn.py  logger.py  manifest.py  options.py  params.py  pubsub.py  pubsub_fn.py  remote_config_fn.py  scheduler_fn.py  storage.py  storage_fn.py  tasks.py  tasks_fn.py  test_lab_fn.py
src/firebase_functions/aio/: __init__.py  https_fn.py
src/firebase_functions/alerts/: __init__.py  app_distribution_fn.py  billing_fn.py  crashlytics_fn.py  performance_fn.py
src/firebase_functions/private/: __init__.py  _alerts_fn.py  _identity_fn.py  _identity_fn_event_types.py  emulator.py  manifest.py  path_pattern.py  serving.py  token_verifier.py  util.py
tests/: conftest.py  firebase_config_test.json  repro_async_error.py  test_async_https_fn.py  test_dataconnect_fn.py  test_db.py  test_eventarc_fn.py  test_firestore_fn.py  test_https_fn.py  test_identity_fn.py  test_init.py  test_logger.py  test_manifest.py  test_options.py  test_params.py  test_path_pattern.py  test_pubsub_fn.py  test_remote_config_fn.py  test_scheduler_fn.py  test_storage_fn.py  test_tasks_fn.py  test_test_lab_fn.py  test_util.py
